syntax = "proto3";

package greeter;

import "google/api/annotations.proto";

service Greeter {
  rpc GreetRPC(GreetReq) returns (GreetReply) {
    option (google.api.http) = {
      get : "/greet"
    };
  }
}

message GreetReq {}

message GreetReply { string reply = 1; }